# Giesela

./: .gitignore  README.md  startGisela.sh
gSockets/: config_alt.txt  log.txt  log.txt.save
gisela_webinterface/: designV2.css  front.html  front.php  front2.html  receive.php  send.php  speicherEinstellungen.php
src/C++/: .directory  CMakeLists.txt  DTOs.hpp  UnixSocket.cpp  UnixSocket.h  giessen.cpp  gisela.cpp  gisela.hpp  hardware.cpp  hardware.hpp  mailInterface.cpp  main.cpp  restapi.cpp  restapi.hpp  restapi_controller.cpp  restapi_controller.h
src/gSockets/: config.txt  config_alt2.txt  config_alt3.txt
var/conf/: config.json
